@@ -85,6 +85,9 @@ USE_CODEC_WILDMIDI=no
 MP3LIB=mad
 # which library to use for ogg decoding: vorbis or tremor
 VORBISLIB=vorbis
+# whether the codecs allocate on the zone instead of
+# system memory (set to yes for DOS builds, for example)
+CODECS_USE_ZONE=no
 
 # include the common dirty stuff
 include $(UHEXEN2_TOP)/scripts/makefile.inc
@@ -158,10 +161,7 @@ endif
 #############################################################
 # Other build flags
 #############################################################
-CPPFLAGS+= -DH2W -DSVGAQUAKE
-
-# use x86 assembly
-CPPFLAGS+= -DUSE_INTEL_ASM
+CPPFLAGS+= -DH2W
 
 ifdef DEMO
 CPPFLAGS+= -DDEMOBUILD
@@ -172,23 +172,8 @@ ifdef DEBUG
 CPPFLAGS+= -DDEBUG=1 -DDEBUG_BUILD=1
 endif
 
-ifeq ($(MP3LIB),mad)
-lib_mp3dec=-lmad
-endif
-ifeq ($(MP3LIB),mpg123)
-lib_mp3dec=-lmpg123
-endif
-ifeq ($(VORBISLIB),vorbis)
-cpp_vorbisdec=
-lib_vorbisdec=-lvorbis -lvorbisfile -logg
-endif
-ifeq ($(VORBISLIB),tremor)
-cpp_vorbisdec=-DVORBIS_USE_TREMOR
-lib_vorbisdec=-lvorbisidec -logg
-endif
-
 #############################################################
-# no streaming music if no sound
+# streaming music initial setup
 #############################################################
 ifneq ($(USE_SOUND),yes)
 USE_CODEC_WAVE=no
@@ -197,29 +182,29 @@ USE_CODEC_WILDMIDI=no
 USE_CODEC_MP3=no
 USE_CODEC_VORBIS=no
 endif
-
+# sanity checking for decoder library options
 ifneq ($(VORBISLIB),vorbis)
 ifneq ($(VORBISLIB),tremor)
-USE_CODEC_VORBIS=no
+$(error Invalid VORBISLIB setting)
 endif
 endif
-
-ifeq ($(MP3LIB),mad)
-mp3_obj=snd_mp3.o
-else
-ifeq ($(MP3LIB),mpg123)
-mp3_obj=snd_mpg123.o
-else
-USE_CODEC_MP3=no
-mp3_obj=snd_mp3.o
+ifneq ($(MP3LIB),mpg123)
+ifneq ($(MP3LIB),mad)
+$(error Invalid MP3LIB setting)
 endif
 endif
 
 
 #############################################################
-# Unix flags/settings
+# Unix flags/settings and overrides:
 #############################################################
+NASMFLAGS=-f elf -d_NO_PREFIX
+# use x86 assembly
+USE_X86_ASM=yes
+
 LDFLAGS += $(LIBSOCKET) -lm -lvga
+
+CPPFLAGS+= -DSVGAQUAKE
 
 ifeq ($(USE_SOUND),yes)
 ifneq ($(USE_ALSA),yes)
@@ -242,6 +227,23 @@ endif
 #############################################################
 # Streaming music settings
 #############################################################
+ifeq ($(MP3LIB),mad)
+mp3_obj=snd_mp3.o
+lib_mp3dec=-lmad
+endif
+ifeq ($(MP3LIB),mpg123)
+mp3_obj=snd_mpg123.o
+lib_mp3dec=-lmpg123
+endif
+ifeq ($(VORBISLIB),vorbis)
+cpp_vorbisdec=
+lib_vorbisdec=-lvorbisfile -lvorbis -logg
+endif
+ifeq ($(VORBISLIB),tremor)
+cpp_vorbisdec=-DVORBIS_USE_TREMOR
+lib_vorbisdec=-lvorbisidec -logg
+endif
+
 ifeq ($(USE_CODEC_WAVE),yes)
 CPPFLAGS+= -DUSE_CODEC_WAVE
 endif
@@ -265,7 +267,22 @@ CPPFLAGS+= -DUSE_CODEC_WILDMIDI
 LDFLAGS+= -lWildMidi
 endif
 
+ifeq ($(CODECS_USE_ZONE),yes)
+CPPFLAGS+=-DCODECS_USE_ZONE
+endif
+
 # End of streaming music settings
+#############################################################
+
+#############################################################
+# Finalize things after the system specific overrides:
+#############################################################
+
+ifeq ($(USE_X86_ASM),yes)
+CPPFLAGS+= -DUSE_INTEL_ASM
+endif
+
+#
 #############################################################
 
 
